--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-use": "^17.4.0",
+    "react-zoom-pan-pinch": "^3.1.0",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
