--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
